--- a/FeuilleDeTemps/FeuilleDeTemps.csproj
+++ b/FeuilleDeTemps/FeuilleDeTemps.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="fdtDataSet.cs">
+      <DependentUpon>fdtDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="fdtDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -74,6 +77,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainScreen.resx">
       <DependentUpon>MainScreen.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
