--- a/FeuilleDeTemps/FeuilleDeTemps.csproj
+++ b/FeuilleDeTemps/FeuilleDeTemps.csproj
@@ -69,6 +69,12 @@
     <Compile Include="MainScreen.Designer.cs">
       <DependentUpon>MainScreen.cs</DependentUpon>
     </Compile>
+    <Compile Include="AddModifPopUp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddModifPopUp.Designer.cs">
+      <DependentUpon>AddModifPopUp.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CurrentUser.cs" />
@@ -78,6 +84,9 @@
     <EmbeddedResource Include="MainScreen.resx">
       <DependentUpon>MainScreen.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddModifPopUp.resx">
+      <DependentUpon>AddModifPopUp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
