--- a/FeuilleDeTemps/FeuilleDeTemps.csproj
+++ b/FeuilleDeTemps/FeuilleDeTemps.csproj
@@ -49,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddPopUp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddPopUp.Designer.cs">
+      <DependentUpon>AddPopUp.cs</DependentUpon>
+    </Compile>
     <Compile Include="fdtDataSet.cs">
       <DependentUpon>fdtDataSet.xsd</DependentUpon>
     </Compile>
@@ -74,6 +80,12 @@
     </Compile>
     <Compile Include="AddModifPopUp.Designer.cs">
       <DependentUpon>AddModifPopUp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModifPopUp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModifPopUp.Designer.cs">
+      <DependentUpon>ModifPopUp.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
